# github-codemunch-mcp

./: .dockerignore  .gitignore  AGENT_HOOKS.md  ARCHITECTURE.md  BUILD_ORDER.md  CACHE_SPEC.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  Caddyfile  Dockerfile  GROQ.md  LANGUAGE_SUPPORT.md  PROMPT.md  QUICKSTART.md  README.md  SECURITY.md  SPEC.md  SYMBOL_SPEC.md  TOKEN_SAVINGS.md  TWEAKCC.md  USER_GUIDE.md  WHY_CODEMUNCH.md  docker-compose.yml  pyproject.toml
benchmarks/: results_v1.70.0.md  run_benchmarks.py  schema_baseline.json
cli/: cli.py
examples/: groq_validate.py
tests/: test_al.py  test_branch_indexing.py  test_call_extraction.py  test_call_hierarchy.py  test_call_references_model.py  test_check_rename_safe.py  test_cli.py  test_complexity.py  test_config.py  test_copilot_hook.py  test_dead_code_v2.py  test_docs_config_parity.py  test_extraction_candidates.py  test_file_summaries.py  test_find_importers.py  test_get_file_outline_integration.py  test_hardening.py  test_hooks.py  test_identity_mode.py  test_init.py  test_install_copilot_hooks.py  test_languages.py  test_negative_evidence.py  test_pagerank.py  test_parser.py  test_path_map.py  test_plan_turn.py  test_post_tool_use_hook.py  test_reindex_state.py  test_render_diagram_integration.py  test_render_diagram_viewer.py  test_repo_health.py  test_resolve_repo.py  test_schema_budget.py  test_search_symbols_defaults.py  test_security.py  test_semantic_search.py  test_server.py  test_session_journal.py  test_storage.py  (+8 more)
vscode-extension/: README.md  package-lock.json  package.json
(+1258 files in other folders)
